--- a/readme.org
+++ b/readme.org
@@ -1,16 +1,10 @@
-maali
-=====
-lesser copy of paint_ gem
 
-.. _paint: http://github.com/janlelis/paint
-
-
-usage
------
-
-.. code-block:: scheme
-
+* maali [[https://travis-ci.org/mytoh/dotemacsd][https://travis-ci.org/mytoh/dotemacsd.svg]]
+lesser copy of [[http://github.com/janlelis/paint][paint]] gem
+** usage
+#+begin_src scheme
      (paint "test" 'red)          => "[38;5;120mtest[0m"
      (paint "test" 120)           => "[31mtest[0m"
      (paint "test" "#4183C4")     => "[38;5;74mtest[0m"
      (paint "test" "MediumPurple") => "[38;5;141mtest[0m"
+#+end_src
